Rerun GMM 1 after updating microbenchmark package

--- a/content/post/2019-04-22-1.Rmd
+++ b/content/post/2019-04-22-1.Rmd
@@ -23,6 +23,10 @@ output:
 
 * [高斯混合模型2](/2019/04/27/2)
 * [高斯混合模型3](/2019/05/15/3)
+* [高斯混合模型4](/2019/05/19/4)
+* [高斯混合模型5](/2019/05/27/5)
+* [高斯混合模型6](/2019/09/10/6)
+* [高斯混合模型7](/2019/09/22/7)
 
 # 模型定义
 具体模型如下：我们有一批数据$\{x_i\}, i=1,\dots, n$,其中每个数据都是独立服从一个混合高斯分布。即
